<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Popular Movies</string>
    <string name="title_activity_home">Popular Movies</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="pref_sort_order_key">pref_sort_order</string>
    <string name="overview">Overview</string>
    <!--Using xliff:g prevents translations-->
    <string name="fmt_vote_average">Vote Average : <xliff:g id="vote">%.1f</xliff:g>/10</string>
    <string name="no_movie_to_display">No Movie to display</string>
    <string name="sort_item_top_rated">top_rated</string>
    <string name="sort_item_popular">popular</string>
    <string name="sort_item_favorite">favorite</string>
    <string name="ensure_tha_you_have_internet_connection">Ensure tha you have internet connection</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="favorite">Favorite</string>

    <string name="more_reviews">More Review</string>
    <string name="content_authority">com.bellman.pm.app</string>
    <string name="pref_sorting_order_default">favorite</string>
    <string name="share">Share</string>
    <string name="empty_favorite">Your Favorite is Empty</string>
    <string name="empty_favorite_sub_title">Ensure that you have added some movies to favorite.</string>
    <string name="share_movie_string_format">You may want to see this movie, I am sure you will like,
        follow this link <xliff:g id="trailer_url">%s</xliff:g> to view the trailer on
        YouTube\n\n#Popular Movies App.\nMade with \u2764 @ Udacity.</string>
    <string name="poster_image">Poster Image</string>
    <string name="empty_view_icon">Empty View Icon</string>
    <string name="can_not_share_movie">Can not share movie without a trailer</string>
    <string name="share_popular_movies_with">Share Popular Movies with:</string>
    <string name="share_intent_type">text/plain</string>
</resources>
