<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/app_name_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/app_name_tv_size"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinner_sort"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/spinner_margin_left"
                        android:layout_marginRight="@dimen/spinner_margin_left" />
                </RelativeLayout>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchMode="columnWidth"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="com.bellman.pm.home.HomeFragment"
            tools:showIn="@layout/activity_fragment">

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/swipe_to_refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <GridView
                    android:id="@+id/movie_grid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:columnWidth="@dimen/movie_grid_column_width"
                    android:horizontalSpacing="@dimen/movie_grid_col_spacing"
                    android:numColumns="auto_fit"
                    android:padding="@dimen/movie_grid_view_padding"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="@dimen/movie_grid_col_spacing">

                </GridView>
            </android.support.v4.widget.SwipeRefreshLayout>

            <LinearLayout
                android:id="@+id/no_movie_empty_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="invisible">

                <ImageView
                    android:contentDescription="@string/empty_view_icon"
                    android:id="@+id/empty_view_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_cloud_off" />

                <TextView
                    android:id="@+id/empty_view_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_movie_to_display"
                    android:textSize="@dimen/dim_empty_data_tv" />
                <TextView
                    android:id="@+id/empty_view_sub_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ensure_tha_you_have_internet_connection" />


            </LinearLayout>


        </RelativeLayout>


    </android.support.design.widget.CoordinatorLayout>
</layout>

